[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Vinicius Agostini <vinicius.agostini19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "0.24.2"
Flask = "~1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
